--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,13 +1,9 @@
-{% extends 'main/navbar.html' %}
-{% block title %} Home {% endblock title %}
-
-
-{% block body %}
+{% extends 'main/navbar.html' %} {% block title %} Home {% endblock title %} {% block body %}
 <div class="container mb-0 mt-5">
     <div class="jumbotron">
         <h3 class="text-center">Search For Any Movie</h3>
         <form class="input-group">
-            <input class="form-control " type="search"  name="q" placeholder="Search Movies..."  value="{{request.GET.q}}">
+            <input class="form-control " type="search" name="q" placeholder="Search Movies..." value="{{request.GET.q}}">
             <span class="input-group-append">
               <button class="btn btn-outline-light" type="submit">
                   <i class="fa fa-search"></i>
@@ -29,20 +25,17 @@
 <div class="container col-md-10">
     <div class="row">
         {% for movie, poster in movies_and_posters %}
-            <div class="card text-center col-sm-3 my-1">
-                <img class="card-img-top img-thumbnail" src="{{poster}}" alt="Movie Poster" >
-                <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">{{movie.title}}</h5>
-                    <p class="card-text">{{movie.genres}}</p>
-                    <button type="button" class="btn btn-primary mt-auto">
+        <div class="card text-center col-sm-3 my-1">
+            <img class="card-img-top img-thumbnail" src="{{poster}}" alt="Movie Poster">
+            <div class="card-body d-flex flex-column">
+                <h5 class="card-title">{{movie.title}}</h5>
+                <p class="card-text">{{movie.genres}}</p>
+                <button type="button" class="btn btn-primary mt-auto">
                     <a href="{% url 'details' movie.pk %}" class="text-white">More Info</a>
                     </button>
-                </div>
             </div>
+        </div>
         {% endfor %}
-  </div>
+    </div>
 </div>
-{% endif %}
-  
-
-{% endblock body %}
+{% endif %} {% endblock body %}
